--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,5 @@
             "Imcorleone\\LaravelFirstData": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
