--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
-        "vinceg/firstdataapi": "dev-master"
+        "vinceg/firstdataapi": "@dev"
     },
     "autoload": {
         "psr-0": {
