--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "illuminate/support": "4.2.*",
-        "vinceg/firstdataapi": "@dev"
+        "vinceg/firstdataapi": "dev-master"
     },
 
     "autoload": {
